tests/compile_fail/ktstr_test_non_key_value.rs
use ktstr::ktstr_test;

#[ktstr_test(something)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
